<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.hm.achievement</groupId>
    <artifactId>advanced-achievements</artifactId>
    <version>${revision}</version>
    <url>https://github.com/mrfdev/advanced-achievements/</url>
    <name>AdvancedAchievements</name>
    <description>A Minecraft plugin that brings unique and challenging achievements on your server! Books, GUI,
        rankings, rewards, effects and more!
    </description>
    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/mrfdev/advanced-achievements/issues</url>
    </issueManagement>
    <packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>21</java.version>
        <revision>7.3.9</revision>
        <mockito.version>5.21.0</mockito.version>
        <!--<maven.test.skip>true</maven.test.skip>!-->
    </properties>

    <modules>
        <module>advanced-achievements-plugin</module>
        <module>advanced-achievements-api</module>
    </modules>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.14.1</version>
                    <configuration>
                        <compilerArgs>
                            <arg>-Xlint:deprecation</arg>
                            <arg>-Xlint:-options</arg>
                            <arg>-Xdiags:verbose</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.6.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.4</version>
                    <configuration>
                        <argLine>
                            -javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar
                            -Xshare:off
                        </argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <repositories>
        <repository>
            <id>essentials-repo</id>
            <url>https://repo.essentialsx.net/releases/</url>
        </repository>
        <repository>
            <id>placeholderapi-repo</id>
            <url>https://repo.extendedclip.com/releases</url>
        </repository>
        <repository>
            <id>jitpack-repo</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.hm.achievement</groupId>
                <artifactId>advanced-achievements-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.dagger</groupId>
                <artifactId>dagger</artifactId>
                <version>2.57.2</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.20.0</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-text</artifactId>
                <version>1.15.0</version>
            </dependency>
            <dependency>
                <groupId>io.papermc.paper</groupId>
                <artifactId>paper-api</artifactId>
                <version>1.21.11-R0.1-SNAPSHOT</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>com.github.MilkBowl</groupId>
                <artifactId>VaultAPI</artifactId>
                <version>1.7.1</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>com.github.pyvesb</groupId>
                <artifactId>petmaster</artifactId>
                <version>1.12.5</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>com.github.Zrips</groupId>
                <artifactId>Jobs</artifactId>
                <version>v5.2.6.2</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>com.github.Zrips</groupId>
                <artifactId>CMI-API</artifactId>
                <version>9.7.14.3</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>net.essentialsx</groupId>
                <artifactId>EssentialsX</artifactId>
                <version>2.21.2</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>me.clip</groupId>
                <artifactId>placeholderapi</artifactId>
                <version>2.11.7</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>42.7.8</version>
            </dependency>
            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>2.4.240</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>2.20.1</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>net.kyori</groupId>
                <artifactId>adventure-platform-bukkit</artifactId>
                <version>4.4.1</version>
            </dependency>
            <dependency>
                <groupId>net.kyori</groupId>
                <artifactId>adventure-text-serializer-legacy</artifactId>
                <version>4.26.1</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>net.kyori</groupId>
                <artifactId>adventure-api</artifactId>
                <version>4.26.1</version>
            </dependency>
            <dependency>
                <groupId>net.kyori</groupId>
                <artifactId>adventure-text-serializer-plain</artifactId>
                <version>4.26.1</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>javax.inject</groupId>
                <artifactId>javax.inject</artifactId>
                <version>1</version>
            </dependency>
            <dependency>
                <groupId>org.jspecify</groupId>
                <artifactId>jspecify</artifactId>
                <version>1.0.0</version>
            </dependency>
            <dependency>
                <groupId>org.jetbrains</groupId>
                <artifactId>annotations</artifactId>
                <version>26.0.2-1</version>
            </dependency>
            <dependency>
                <groupId>com.gmail.nossr50.mcMMO</groupId>
                <artifactId>mcMMO</artifactId>
                <version>2.2.031</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>33.5.0-jre</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-params</artifactId>
                <version>6.0.2</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>6.0.2</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-junit-jupiter</artifactId>
                <version>${mockito.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>



